# ChangeLog for net-wireless/wireless-tools
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/wireless-tools/ChangeLog,v 1.35 2004/08/30 12:34:07 dholm Exp $

  30 Aug 2004; David Holm <dholm@gentoo.org> wireless-tools-27_pre23.ebuild:
  Added to ~ppc.

  22 Aug 2004; Tom Gall <tgall@gentoo.org> wireless-tools-26-r1.ebuild:
  stable on ppc64, bug #58227

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  wireless-tools-24.ebuild, wireless-tools-25-r1.ebuild,
  wireless-tools-26-r1.ebuild, wireless-tools-26.ebuild,
  wireless-tools-26_pre9.ebuild, wireless-tools-27_pre2-r1.ebuild,
  wireless-tools-27_pre22.ebuild, wireless-tools-27_pre23.ebuild:
  virtual/glibc -> virtual/libc

*wireless-tools-26-r1 (24 Jun 2004)

  24 Jun 2004; Peter Johanson <latexer@gentoo.org>
  +wireless-tools-26-r1.ebuild:
  Revision bump latest stable to get everyone to have /usr/include/wireless.h, a
  local copy which is needed for some applications. See bug #52487.

*wireless-tools-27_pre23 (24 Jun 2004)

  24 Jun 2004; Peter Johanson <latexer@gentoo.org>
  -wireless-tools-27_pre17.ebuild, +wireless-tools-27_pre23.ebuild:
  Bump, and now install wireless.h (see bug #52478). Also remove one older
  version.

  14 Jun 2004; Aron Griffis <agriffis@gentoo.org>
  wireless-tools-27_pre17.ebuild, wireless-tools-27_pre22.ebuild:
  Fix use invocation

  13 Jun 2004; Travis Tilley <lv@gentoo.org> wireless-tools-26.ebuild,
  wireless-tools-27_pre22.ebuild:
  marked 26 as stable and 27_pre22 as testing on amd64

*wireless-tools-27_pre22 (01 May 2004)

  01 May 2004; Peter Johanson <latexer@gentoo.org> wireless-tools-25.ebuild,
  wireless-tools-27_pre2.ebuild, wireless-tools-27_pre22.ebuild,
  wireless-tools-27_pre3.ebuild, wireless-tools-27_pre7.ebuild:
  Bump to latest 27_pre, and remove a bunch of old ebuilds.

*wireless-tools-27_pre2-r1 (18 Mar 2004)
*wireless-tools-27_pre17 (18 Mar 2004)
