@@ -1,18 +1,20 @@
+MD5 9701177fc7a8e02b8d1da7db7d3cfdb8 wireless-tools-27_pre23.ebuild 1309
+MD5 b896f385c9fb9dc0d9b60c0581cdacd7 wireless-tools-24.ebuild 782
+MD5 5593ff702221e87b37db50362e53edf4 wireless-tools-26-r1.ebuild 1103
+MD5 95d5ddffb15348e905eb6bea4ec91513 wireless-tools-26.ebuild 1088
+MD5 db0e7746c702c811bed43e789ba6d02c wireless-tools-25-r1.ebuild 981
+MD5 94316198beb9a17d7ac3820d8fca7655 wireless-tools-27_pre22.ebuild 1298
+MD5 88af1a2e821d777e27b6034c522efcd7 wireless-tools-26_pre9.ebuild 1019
+MD5 806543979523d56417c938230fb835e3 wireless-tools-27_pre26.ebuild 1188
 MD5 9a211dc9f8fe9a00aa1428eb520e4ee7 ChangeLog 7203
 MD5 6e62eab39b65446971f453b3db9a7ce7 metadata.xml 463
-MD5 b896f385c9fb9dc0d9b60c0581cdacd7 wireless-tools-24.ebuild 782
-MD5 db0e7746c702c811bed43e789ba6d02c wireless-tools-25-r1.ebuild 981
-MD5 95d5ddffb15348e905eb6bea4ec91513 wireless-tools-26.ebuild 1088
-MD5 88af1a2e821d777e27b6034c522efcd7 wireless-tools-26_pre9.ebuild 1019
 MD5 0800eb70077fbb0400860352ba3f3908 wireless-tools-27_pre2-r1.ebuild 1333
-MD5 94316198beb9a17d7ac3820d8fca7655 wireless-tools-27_pre22.ebuild 1298
-MD5 5593ff702221e87b37db50362e53edf4 wireless-tools-26-r1.ebuild 1103
-MD5 9701177fc7a8e02b8d1da7db7d3cfdb8 wireless-tools-27_pre23.ebuild 1309
 MD5 802e050ebc4a8045fede12c9010d5722 files/digest-wireless-tools-24 68
-MD5 7fff9cc8445ac11352c7ca684f63e80b files/digest-wireless-tools-25-r1 69
 MD5 4c55d80eb5c0a27d8e13fd33c5364b15 files/digest-wireless-tools-26 69
+MD5 7fff9cc8445ac11352c7ca684f63e80b files/digest-wireless-tools-25-r1 69
+MD5 4c55d80eb5c0a27d8e13fd33c5364b15 files/digest-wireless-tools-26-r1 69
 MD5 0e1ff5e2c4b59dd4e42ec86f43079d58 files/digest-wireless-tools-26_pre9 74
 MD5 756d0d41aadf1a0c9afd2640987bf55c files/digest-wireless-tools-27_pre2-r1 74
 MD5 7482ef0bf1d69528468ceef1974f3ca6 files/digest-wireless-tools-27_pre22 75
-MD5 4c55d80eb5c0a27d8e13fd33c5364b15 files/digest-wireless-tools-26-r1 69
 MD5 e964f97872fcc6571b87c08856de9727 files/digest-wireless-tools-27_pre23 75
+MD5 b9463dae5339015010d7b58a81b01260 files/digest-wireless-tools-27_pre26 75
